--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "bcrypt": "5.0.0",
+    "crypto": "1.0.1",
     "debug": "4.2.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
